name:                example
version:             1
synopsis:            Example of cabal-doctest
description:         A package skeleton, to demostrate the use of cabal-doctest
homepage:            https://github.com/phadej/cabal-doctest
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2017 Oleg Grenrus
category:            Example
build-type:          Custom
-- We should specify >= 1.24
-- but if we use cabal new-build, it's not strictly necessary
cabal-version:       >=1.10

custom-setup
  setup-depends:
    base, Cabal, cabal-doctest

library
  exposed-modules:     Example
  default-extensions:  ScopedTypeVariables RankNTypes
  build-depends:       base >=4.3 && <4.11
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:
    base,
    doctest >= 0.11.1 && <0.12
  ghc-options:         -Wall -threaded
  hs-source-dirs:      tests
  default-language:    Haskell2010
