name:                example
version:             1
synopsis:            Example of cabal-doctest
description:         A package skeleton, to demostrate the use of cabal-doctest
homepage:            https://github.com/phadej/cabal-doctest
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2017 Oleg Grenrus
category:            Example
build-type:          Custom
cabal-version:       >=1.24

custom-setup
  setup-depends:
    base, Cabal, cabal-doctest >=1.0.2 && <1.1

library
  exposed-modules:     Example
  default-extensions:  ScopedTypeVariables RankNTypes
  build-depends:       base >=4.3 && <4.11
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:
    base,
    doctest >= 0.11.3 && <0.12,
    QuickCheck ==2.10.*,
    template-haskell
  ghc-options:         -Wall -threaded
  hs-source-dirs:      tests
  default-language:    Haskell2010
  -- we care about these with new GHC only
  if impl(ghc >= 8.2)
    autogen-modules:     Build_doctests
    other-modules:       Build_doctests
