cabal-version: 1.12
name:          multiple-components-example
version:       1
synopsis:      cabal-doctest example
description:
  A package skeleton, to demostrate the use of cabal-doctest
  .
  This package has library and executable components, both with doctests

homepage:      https://github.com/phadej/cabal-doctest
license:       BSD3
license-file:  LICENSE
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:     (c) 2017 Oleg Grenrus
category:      Example
build-type:    Custom
tested-with:   GHC ==8.6.4 || ==8.4.4 || ==8.2.2 || ==8.0.2 || ==7.10.3

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest  >=1.0.6 && <1.1

library
  exposed-modules:    Example
  default-extensions:
    RankNTypes
    ScopedTypeVariables

  build-depends:      base >=4.3 && <4.13
  hs-source-dirs:     src
  default-language:   Haskell2010

executable my-exe
  main-is:          Something.hs
  other-modules:    OtherModule
  build-depends:
      base
    , multiple-components-example

  ghc-options:      -Wall -threaded
  hs-source-dirs:   exe
  default-language: Haskell2010

test-suite doctests
  x-doctest-components: lib exe:my-exe
  type:                 exitcode-stdio-1.0
  main-is:              doctests.hs
  build-depends:
      base
    , doctest                      >=0.15 && <0.17
    , multiple-components-example
    , QuickCheck                   >=2.12 && <2.14
    , template-haskell

  ghc-options:          -Wall -threaded
  hs-source-dirs:       tests
  default-language:     Haskell2010
