cabal-version: 1.12
name:          multiple-components-example
version:       1
synopsis:      cabal-doctest example
description:
  A package skeleton, to demostrate the use of cabal-doctest
  .
  This package has library and executable components, both with doctests

homepage:      https://github.com/phadej/cabal-doctest
license:       BSD3
license-file:  LICENSE
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Andreas Abel
copyright:     (c) 2017 Oleg Grenrus
category:      Example
build-type:    Custom

tested-with:
  GHC == 9.4.1
  GHC == 9.2.3
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2
  GHC == 7.10.3
  GHC == 7.8.4
  GHC == 7.6.3
  GHC == 7.4.2
  GHC == 7.2.2
  GHC == 7.0.4

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest  >=1.0.9 && <1.1

library
  exposed-modules:    Example
  default-extensions:
    RankNTypes
    ScopedTypeVariables

  build-depends:      base >=4.3 && <5
  hs-source-dirs:     src
  default-language:   Haskell2010

executable my-exe
  main-is:          Something.hs
  other-modules:    OtherModule
                    Paths_multiple_components_example
  build-depends:
      base
    , multiple-components-example

  ghc-options:      -Wall -threaded
  hs-source-dirs:   exe
  default-language: Haskell2010

test-suite doctests
  x-doctest-components: lib exe:my-exe
  type:                 exitcode-stdio-1.0
  main-is:              doctests.hs
  build-depends:
      base
    , base-compat                  >=0.10.5 && <0.13
    , doctest                      >=0.15   && <0.21
    , multiple-components-example
    , QuickCheck                   >=2.12   && <2.15
    , template-haskell

  ghc-options:          -Wall -threaded
  hs-source-dirs:       tests
  default-language:     Haskell2010
