cabal-version: 1.12
name:          multiple-components-example
version:       1
synopsis:      cabal-doctest example
description:
  A package skeleton, to demostrate the use of cabal-doctest
  .
  This package has library and executable components, both with doctests

homepage:      https://github.com/phadej/cabal-doctest
license:       BSD3
license-file:  LICENSE
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Andreas Abel
copyright:     (c) 2017 Oleg Grenrus
category:      Example
build-type:    Custom

tested-with:
  GHC == 9.10.1
  GHC == 9.8.2
  GHC == 9.6.5
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

custom-setup
  setup-depends:
      base           < 5
    , cabal-doctest  >=1.0.9 && <1.1

    -- Declaring this setup-dep fixes `stack build`. NOTE: Cabal API is not used directly
    -- in the examples' Setup.hs! Instead, indirectly through wrappings of cabal-doctest.
    --
    -- When copying the example, you may of course delete this note, and start importing
    -- Cabal stuff directly from Setup.hs.
    --  ! Make sure to set a tighter bound, e.g. Cabal <3.16, here in setup-depends !
    -- as soon as you do that.
    , Cabal >= 1.24 && <4
    -- > Warning: [...] Each major release of the 'Cabal' package changes the API
    -- > in various ways and most packages will need some changes to compile with it.
    -- > If you are not sure what upper bound to use then use the next major version.

library
  exposed-modules:    Example
  default-extensions:
    RankNTypes
    ScopedTypeVariables

  build-depends:      base >=4.3 && <5
  hs-source-dirs:     src
  default-language:   Haskell2010

executable my-exe
  main-is:          Something.hs
  other-modules:    OtherModule
                    Paths_multiple_components_example
  build-depends:
      base
    , multiple-components-example

  ghc-options:      -Wall -threaded
  hs-source-dirs:   exe
  default-language: Haskell2010

test-suite doctests
  x-doctest-components: lib exe:my-exe
  type:                 exitcode-stdio-1.0
  main-is:              doctests.hs
  build-depends:
      base
    , base-compat                  >=0.10.5 && <1
    , doctest                      >=0.15   && <1
    , multiple-components-example
    , QuickCheck                   >=2.10   && <3
    , template-haskell

  ghc-options:          -Wall -threaded
  hs-source-dirs:       tests
  default-language:     Haskell2010
