name:          simple-example
version:       1
synopsis:      cabal-doctest basic example
description:
  Simple example of cabal-doctest demonstrating a library
  with doctests

homepage:      https://github.com/phadej/cabal-doctest
license:       BSD3
license-file:  LICENSE
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:     (c) 2017 Oleg Grenrus
category:      Example
build-type:    Custom
cabal-version: 1.12

tested-with:
  GHC == 7.0.4
  GHC == 7.2.2
  GHC == 7.4.2
  GHC == 7.6.3
  GHC == 7.8.4
  GHC == 7.10.3
  GHC == 8.0.2
  GHC == 8.2.2
  GHC == 8.4.4
  GHC == 8.6.5
  GHC == 8.8.4
  GHC == 8.10.7
  GHC == 9.0.1
  GHC == 9.2.1

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest  >=1.0.9 && <1.1

library
  exposed-modules:    Example
  default-extensions:
    RankNTypes
    ScopedTypeVariables

  build-depends:      base >=4.3 && <4.17
  hs-source-dirs:     src
  default-language:   Haskell2010

test-suite doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  build-depends:
      base
    , base-compat       >=0.10.5 && <0.13
    , doctest           >=0.15   && <0.19
    , QuickCheck        >=2.12   && <2.15
    , simple-example
    , template-haskell

  ghc-options:      -Wall -threaded
  hs-source-dirs:   tests
  default-language: Haskell2010
